[tool.poetry]
name = "my-package"
version = "0.2.0"
description = "Demo package"
authors = ["Marvelous MLOps <marvelousmlops@gmail.com>"]
packages = [
    {include = "my_package", from="src"}
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">3.10.11"
pyyaml = "^6.0.1"


